# granatowazakladka.github.io

./: .gitignore  pelicanconf.py  pyproject.toml
.github/workflows/: deploy.yaml
content/posts/2017/05/: podsumowanie-maj-2017.rst
content/posts/2017/06/: 31.rst  bog-w-wielkim-miescie-cisza-i-ukojenie.rst  sekretarz-dwoch-papiezy.rst  spalic-paszport-czyli-historia-pewnego-misjonarza.rst  totalna-euforia.rst  wojtek-bohater-nie-tylko-dla-dzieci.rst  wrobelek-z-kosci.rst  zawolajcie-polozna.rst
content/posts/2017/07/: 72-2.rst  charlie-i-fabryka-czekolady-smakowita-przygoda-w-rzece-czekolady.rst  habit-zamiast-szminki-czyli-zakonnice-zabieraja-glos.rst  pierwszy-bookathon-i-pierwsze-bledy.rst  swiatlo-miedzy-oceanami-morze-emocji.rst
content/posts/2017/08/: bridget-jones-kilka-slow-o-serii-i-mojej-przyjazni-z-bohaterka.rst  pax-przygody-przyjazn-i-nadzieja.rst  podsumowanie-lipiec-2017.rst  pragnienie-pierwsze-spotkanie-z-richardem-flanaganem.rst  sekretne-zycie-pszczol.rst  sputnik-sweetheart-i-odrobina-samotnosci.rst  wakacyjny-plazowy-tag.rst  za-zamknietymi-drzwiami.rst
content/posts/2017/09/: confess-colleen-hoover.rst  ksiega-dziwnych-nowych-rzeczy-z-misja-u-oazjan.rst  podsumowanie-sierpien-2017.rst  projekt-rosie-milosc-ktora-nie-mogla-sie-zdarzyc.rst
content/posts/2017/10/: november-9-colleen-hoover.rst  o-sw-franciszku-oczyma-kotki-emeline.rst  opowiesc-podrecznej-margaret-atwood.rst  (+1 more)
content/posts/2017/11/: 228-2.rst  234-2.rst  (+4 more)
theme/static/css/: hyde.css  poole.css  style.css
theme/templates/: article.html  base.html  index.html  sidebar.html
(+133 files in other folders)
